A file name has been changed.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /OtobüsBiletProje/WindowsFormsApplication1/.vs/WindowsFormsApplication1/v15
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/.vs/BusTicketApplication/v16/.suo
+/OtobüsBiletProje/WindowsFormsApplication1/.vs/WindowsFormsApplication1/v16
